// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultipageHeader Snapshot > renders default rendering correctly 1`] = `
"<div serply_link="https://example.com">
  <header class="w-full bg-[var(--ui-bg)] transition-all duration-300 py-2 sm:py-4" style="z-index: 10;">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8">
      <!-- When not scrolled: show the regular layout -->
      <div>
        <div class="flex flex-col items-center justify-between gap-8 sm:flex-row">
          <!-- Logo and title section -->
          <div class="flex w-full items-center justify-between gap-8">
            <div class="flex size-[152px] items-center justify-center border border-(--ui-border)">
              <!--v-if-->
            </div>
            <div class="flex-1">
              <div class="flex flex-col items-start justify-center gap-y-1">
                <div class="flex items-center gap-x-2">
                  <h1 class="text-text text-xl font-semibold sm:text-3xl">Music Header</h1>
                </div>
                <p class="text-muted font-medium"></p>
              </div>
            </div>
          </div><!-- Action buttons -->
          <!-- Change w-full to w-auto or remove width entirely so it only takes up the space it needs -->
          <div class="flex flex-none flex-col items-center justify-end gap-3 pt-4 sm:flex-row sm:pt-0">
            <!--v-if-->
          </div>
        </div><!-- Navigation for non-scrolled state -->
        <div class="-mx-4 mt-4 overflow-x-auto px-4 sm:px-0">
          <nav aria-label="page sections" class="flex space-x-4 whitespace-nowrap"><a href="#home" class="sectionLinks flex-shrink-0 rounded-sm px-1 py-2 text-sm font-medium text-gray-900 transition-colors duration-200 hover:bg-gray-50 hover:text-gray-600 sm:px-2 sm:text-base dark:text-gray-100 dark:hover:bg-gray-800 dark:hover:text-gray-300">Home</a><a href="#about" class="sectionLinks flex-shrink-0 rounded-sm px-1 py-2 text-sm font-medium text-gray-900 transition-colors duration-200 hover:bg-gray-50 hover:text-gray-600 sm:px-2 sm:text-base dark:text-gray-100 dark:hover:bg-gray-800 dark:hover:text-gray-300">About</a><a href="#contact" class="sectionLinks flex-shrink-0 rounded-sm px-1 py-2 text-sm font-medium text-gray-900 transition-colors duration-200 hover:bg-gray-50 hover:text-gray-600 sm:px-2 sm:text-base dark:text-gray-100 dark:hover:bg-gray-800 dark:hover:text-gray-300">Contact</a></nav>
        </div>
      </div>
    </div>
  </header>
</div>"
`;

exports[`MultipageHeader Snapshot > renders with empty sections correctly 1`] = `
"<div serply_link="https://example.com">
  <header class="w-full bg-[var(--ui-bg)] transition-all duration-300 py-2 sm:py-4" style="z-index: 10;">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8">
      <!-- When not scrolled: show the regular layout -->
      <div>
        <div class="flex flex-col items-center justify-between gap-8 sm:flex-row">
          <!-- Logo and title section -->
          <div class="flex w-full items-center justify-between gap-8">
            <div class="flex size-[152px] items-center justify-center border border-(--ui-border)">
              <!--v-if-->
            </div>
            <div class="flex-1">
              <div class="flex flex-col items-start justify-center gap-y-1">
                <div class="flex items-center gap-x-2">
                  <h1 class="text-text text-xl font-semibold sm:text-3xl">Music Header</h1>
                </div>
                <p class="text-muted font-medium"></p>
              </div>
            </div>
          </div><!-- Action buttons -->
          <!-- Change w-full to w-auto or remove width entirely so it only takes up the space it needs -->
          <div class="flex flex-none flex-col items-center justify-end gap-3 pt-4 sm:flex-row sm:pt-0">
            <!--v-if-->
          </div>
        </div><!-- Navigation for non-scrolled state -->
        <div class="-mx-4 mt-4 overflow-x-auto px-4 sm:px-0">
          <nav aria-label="page sections" class="flex space-x-4 whitespace-nowrap"></nav>
        </div>
      </div>
    </div>
  </header>
</div>"
`;

exports[`MultipageHeader Snapshot > renders with oneLiner and image correctly 1`] = `
"<div serply_link="https://example.com">
  <header class="w-full bg-[var(--ui-bg)] transition-all duration-300 py-2 sm:py-4" style="z-index: 10;">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8">
      <!-- When not scrolled: show the regular layout -->
      <div>
        <div class="flex flex-col items-center justify-between gap-8 sm:flex-row">
          <!-- Logo and title section -->
          <div class="flex w-full items-center justify-between gap-8">
            <div class="flex size-[152px] items-center justify-center border border-(--ui-border)"><img alt="Music Header logo" data-nuxt-img="" srcset="https://example.com/logo.png 1x, https://example.com/logo.png 2x" class="size-full object-cover" src="https://example.com/logo.png"></div>
            <div class="flex-1">
              <div class="flex flex-col items-start justify-center gap-y-1">
                <div class="flex items-center gap-x-2">
                  <h1 class="text-text text-xl font-semibold sm:text-3xl">Music Header</h1>
                </div>
                <p class="text-muted font-medium">One liner test</p>
              </div>
            </div>
          </div><!-- Action buttons -->
          <!-- Change w-full to w-auto or remove width entirely so it only takes up the space it needs -->
          <div class="flex flex-none flex-col items-center justify-end gap-3 pt-4 sm:flex-row sm:pt-0">
            <!--v-if-->
          </div>
        </div><!-- Navigation for non-scrolled state -->
        <div class="-mx-4 mt-4 overflow-x-auto px-4 sm:px-0">
          <nav aria-label="page sections" class="flex space-x-4 whitespace-nowrap"><a href="#home" class="sectionLinks flex-shrink-0 rounded-sm px-1 py-2 text-sm font-medium text-gray-900 transition-colors duration-200 hover:bg-gray-50 hover:text-gray-600 sm:px-2 sm:text-base dark:text-gray-100 dark:hover:bg-gray-800 dark:hover:text-gray-300">Home</a><a href="#about" class="sectionLinks flex-shrink-0 rounded-sm px-1 py-2 text-sm font-medium text-gray-900 transition-colors duration-200 hover:bg-gray-50 hover:text-gray-600 sm:px-2 sm:text-base dark:text-gray-100 dark:hover:bg-gray-800 dark:hover:text-gray-300">About</a><a href="#contact" class="sectionLinks flex-shrink-0 rounded-sm px-1 py-2 text-sm font-medium text-gray-900 transition-colors duration-200 hover:bg-gray-50 hover:text-gray-600 sm:px-2 sm:text-base dark:text-gray-100 dark:hover:bg-gray-800 dark:hover:text-gray-300">Contact</a></nav>
        </div>
      </div>
    </div>
  </header>
</div>"
`;

exports[`MultipageHeader Snapshot > renders with upvote slot correctly 1`] = `
"<div serply_link="https://example.com">
  <header class="w-full bg-[var(--ui-bg)] transition-all duration-300 py-2 sm:py-4" style="z-index: 10;">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8">
      <!-- When not scrolled: show the regular layout -->
      <div>
        <div class="flex flex-col items-center justify-between gap-8 sm:flex-row">
          <!-- Logo and title section -->
          <div class="flex w-full items-center justify-between gap-8">
            <div class="flex size-[152px] items-center justify-center border border-(--ui-border)">
              <!--v-if-->
            </div>
            <div class="flex-1">
              <div class="flex flex-col items-start justify-center gap-y-1">
                <div class="flex items-center gap-x-2">
                  <h1 class="text-text text-xl font-semibold sm:text-3xl">Music Header</h1>
                </div>
                <p class="text-muted font-medium"></p>
              </div>
            </div>
          </div><!-- Action buttons -->
          <!-- Change w-full to w-auto or remove width entirely so it only takes up the space it needs -->
          <div class="flex flex-none flex-col items-center justify-end gap-3 pt-4 sm:flex-row sm:pt-0">&lt;button&gt;Upvote&lt;/button&gt;
            <!--v-if-->
          </div>
        </div><!-- Navigation for non-scrolled state -->
        <div class="-mx-4 mt-4 overflow-x-auto px-4 sm:px-0">
          <nav aria-label="page sections" class="flex space-x-4 whitespace-nowrap"><a href="#home" class="sectionLinks flex-shrink-0 rounded-sm px-1 py-2 text-sm font-medium text-gray-900 transition-colors duration-200 hover:bg-gray-50 hover:text-gray-600 sm:px-2 sm:text-base dark:text-gray-100 dark:hover:bg-gray-800 dark:hover:text-gray-300">Home</a><a href="#about" class="sectionLinks flex-shrink-0 rounded-sm px-1 py-2 text-sm font-medium text-gray-900 transition-colors duration-200 hover:bg-gray-50 hover:text-gray-600 sm:px-2 sm:text-base dark:text-gray-100 dark:hover:bg-gray-800 dark:hover:text-gray-300">About</a><a href="#contact" class="sectionLinks flex-shrink-0 rounded-sm px-1 py-2 text-sm font-medium text-gray-900 transition-colors duration-200 hover:bg-gray-50 hover:text-gray-600 sm:px-2 sm:text-base dark:text-gray-100 dark:hover:bg-gray-800 dark:hover:text-gray-300">Contact</a></nav>
        </div>
      </div>
    </div>
  </header>
</div>"
`;
